enum EstadoFoco{
  Encendido,
  Apagado
};